# DND_PROJECT

./: CMakeLists.txt  Character.cpp  DND_PROJECT  H_Character.h  H_CharacterManager.h  H_Inventory.h  H_Item.h  H_SpellBook.h  H_Wallet.h  H_equipment.h  H_equipment_tracker.h  H_spells.h  H_stats.h  P_Character.cpp  P_CharacterManager.cpp  P_Inventory.cpp  P_Item.cpp  P_equipment.cpp  P_equipment_tracker.cpp  P_main.cpp  P_spells.cpp  P_stats.cpp  SpellBook.txt  TO-DO_LIST.txt  UML.uxf  build.bat  characters.txt  main.cpp  stats.cpp
data/: SpellBook.txt  characters.txt  temp_spell.txt
data/characters/Thrikna/: character.txt  features.txt
data/characters/chud/: character.txt
data/characters/jack/: character.txt  features.txt
data/characters/paul/: character.txt
docs/: DND_Project.uxf  README.md  TO-DO_LIST.txt  UML.uxf
include/: H_Armor.h  H_Character.h  H_CharacterFeatures.h  H_CharacterManager.h  H_Colours.h  H_DiceRoller.h  H_DndExceptions.h  H_Gear.h  H_Inventory.h  H_Item.h  H_SpellBook.h  H_SpellSlots.h  H_Weapon.h  H_spells.h
src/: P_Armor.cpp  P_Character.cpp  P_CharacterFeatures.cpp  P_CharacterManager.cpp  P_Colours.cpp  P_DiceRoller.cpp  P_Gear.cpp  P_Inventory.cpp  P_Item.cpp  P_SpellBook.cpp  P_SpellSlots.cpp  P_Wallet.cpp  P_Weapon.cpp  P_main.cpp  P_spells.cpp
tests/: CMakeLists.txt  test_character.cpp  test_colours.cpp  test_dice_roller.cpp  test_features.cpp  test_inventory.cpp  test_items.cpp  test_persistence.cpp  test_spell.cpp  test_spellslots.cpp  test_wallet.cpp
